--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,11 +21,11 @@
     {% endif %}
 <br>
 <br>
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Espace de connexion</h1>
     <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" placeholder="Email" required autofocus>
+    <label for="inputPassword">Mot de passe</label>
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" placeholder="Mot de passe" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -42,7 +42,13 @@
         </div>
     #}
 <br>
-<button type="submit" class="btn btn-primary">Sign in</button>
+<button type="submit" class="btn btn-primary">Connexion</button>
 </form>
+            <section class="accueil">
+                <img class="logo" src="/img/gsb.png" alt="">
+                <img class="medecin" src="/img/background.jpg" alt="">
+            </section>
 </div>
+
+
 {% endblock %}
