--- a/templates/gsb/accueil.html.twig
+++ b/templates/gsb/accueil.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Gsb{% endblock %}
 
 {% block body %}
+{# Menu de navigation #}
     <header>
         <a class="nav-title-white" href="{{path('gsb')}}">
             <li>GSB - Galaxy Swiss Bourdin</li>
@@ -13,7 +14,7 @@
     </header>
     <section>
 
-
+{# Tableau de bord #}
         <div class="navigation interact">
             <div class="profil">
                 <i class="far fa-user-circle fa-2x"></i>
