--- a/templates/gsb/modificationFicheHorsForfait.html.twig
+++ b/templates/gsb/modificationFicheHorsForfait.html.twig
@@ -4,6 +4,7 @@
 {% form_theme form2 'bootstrap_5_layout.html.twig' %}
 
 {% block body %}
+{# Menu de navigation #}
     <header>
         <a class="nav-title-white" href="{{path('gsb')}}">
             <li>GSB - Galaxy Swiss Bourdin</li>
@@ -50,22 +51,20 @@
 
 <br>
 
-
+{# Affichage de la période en cours #}
 <section class="filter">
 <div class="periode">
 <h3 class="tab-color">PÉRIODE D'ENGAGEMENT</h3>
 <br>
-<h3>Mars 2022</h3>
+<h3>{{ "now" | date("F Y") }}</h3>
 </section>
 <br>
 <br>
 <br>
 
-
+{# Affichage formualaire fiche hors forfait #}
 <section class="fiches-screen">
 <div class="Fiches-screen">          
-
-
 
 <table class="table">
   <thead>
@@ -80,31 +79,10 @@
       <th class="form-group">{{ form_row(form2.date, {'attr':{'class':'form-control', 'placeholder':'jj/mm/aaaa'}} )}}</th>
       <th class="form-group">{{ form_row(form2.libelle, {'attr':{'class':'form-control', 'placeholder':'Uber'}})}}</th>
       <th class="form-group">{{ form_row(form2.montant, {'attr':{'class':'form-control', 'placeholder':'montant'}})}}</th>
-     
-    </tr>
-  </tbody>
-    <tbody>
-    <tr>
-  
-      <td></td>
-      <td><button type="submit" class="btn btn-secondary">Valider</button></td>
-      <td></td>
-    
-      
-              
     </tr>
   </tbody>
 </table>
-
+<button type="submit" class="btn btn-secondary">Valider</button>
 {{ form_end(form2) }}
 <div> 
-
-               <a href="{{path('saisiefiches')}}" class="interact profil">
-                
-                    Saisir fiche au forfait
-                </a>
-
-
-
-
 {% endblock %}
