--- a/templates/gsb/Saisie.html.twig
+++ b/templates/gsb/Saisie.html.twig
@@ -4,6 +4,7 @@
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
 {% block body %}
+{# Menu de navigation #}
     <header>
         <a class="nav-title-white" href="{{path('gsb')}}">
             <li>GSB - Galaxy Swiss Bourdin</li>
@@ -15,7 +16,7 @@
 
     <section>
 
-
+{# Tableau de bord #}
         <div class="navigation interact">
             <div class="profil">
                 <i class="far fa-user-circle fa-2x"></i>
@@ -41,177 +42,44 @@
         <br>
             <h1 class="title-head">Saisie fiche de frais</h1>
 
-<br>
+        <br>
 
-
+{# Affichage de la période en cours #}
 <section class="filter">
-<div class="periode">
-<h3 class="tab-color">PÉRIODE D'ENGAGEMENT</h3>
-<br>
-<h3>{{ "now" | date("F Y") }}</h3>
+  <div class="periode">
+    <h3 class="tab-color">PÉRIODE D'ENGAGEMENT</h3>
+      <br>
+    <h3>{{ "now" | date("F Y") }}</h3>
 </section>
-<br>
-<br>
-<br>
+  <br>
+    <br>
+  <br>
 
-
+{# Affichage du formualaire de saisie fiche de frais au forfait #}
 <section class="fiches-screen">
-<div class="Fiches-screen">          
-<table class="table">
-  <thead>
-
+  <div class="Fiches-screen">          
+    <table class="table">
+      <thead>
       <h3 class="tab-color">Frais au forfait</h3>
-{{ form_start(form) }}
-  </thead>
+        {{ form_start(form) }}
+      </thead>
 
-  <tbody>
-    <tr>
-    
-      <th>{{ form_row(form.repas_midi, {'attr':{'placeholder':'0'}}) }}</th>
-      {# <th>{{ form_row(form.periode)}}</th> #}
-      <th>{{ form_label(form.periode, 'periode')}} {{ form_widget(form.periode, {'value':  ("now" | date("m/Y")) , 'attr' : {'disabled' : 'disabled'}})}}</th>
-      <th>{{ form_row(form.nuits,  {'attr':{'placeholder':'0'}})}}</th>
-      <th>{{ form_row(form.etape, {'attr':{'placeholder':'0'}})}}</th>
-      <th>{{ form_row(form.km, {'attr':{'placeholder':'0'}})}}</th>
-      <th></th>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <td></td>
-      <td></td>
-      <td><button type="submit" class="btn btn-secondary">Valider</button></td>
-      <td></td>
-      <td></td>
-      
-              
-    </tr>
-  </tbody>
-  
-</table>
-{{ form_end(form) }}
+        <tbody>
+          <tr>
+            <th>{{ form_row(form.repas_midi, {'attr':{'placeholder':'0'}}) }}</th>
+            <th>{{ form_label(form.periode, 'periode')}} {{ form_widget(form.periode, {'value':  ("now" | date("m/Y")) , 'attr' : {'disabled' : 'disabled'}})}}</th>
+            <th>{{ form_row(form.nuits,  {'attr':{'placeholder':'0'}})}}</th>
+            <th>{{ form_row(form.etape, {'attr':{'placeholder':'0'}})}}</th>
+            <th>{{ form_row(form.km, {'attr':{'placeholder':'0'}})}}</th>
+            <th></th>
+          </tr>
+        </tbody>
+      </table>
+      <button type="submit" class="btn btn-secondary">Valider</button>
+        {{ form_end(form) }}
 
-
-<br>
-
-               <a href="{{path('saisiefichesHorsForfait')}}" class="interact profil">
-                    <p>Voulez vous saisir une fiche de type hors forfait ?</p>
-                </a>
-{# 
-
-<table class="table">
-  <thead>
-
-      <h3 class="tab-color">Frais hors forfait</h3>
-{{ form_start(form2) }}
-  </thead>
-
-  <tbody>
-    <tr>
-      <th class="form-group">{{ form_row(form2.date, {'attr':{'class':'form-control', 'placeholder':'jj/mm/aaaa'}} )}}</th>
-      <th class="form-group">{{ form_row(form2.libelle, {'attr':{'class':'form-control', 'placeholder':'Uber'}})}}</th>
-      <th class="form-group">{{ form_row(form2.montant, {'attr':{'class':'form-control', 'placeholder':'montant'}})}}</th>
-     
-    </tr>
-  </tbody>
-    <tbody>
-    <tr>
-  
-      <td></td>
-      <td><button type="submit" class="btn btn-secondary">Valider</button></td>
-      <td></td>
-    
-      
-              
-    </tr>
-  </tbody>
-</table>
-
-{{ form_end(form2) }}
-<div> #}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{# 
-            <div class="champsElementForfaitisé">
-            <br>
-                <h1>Element à Forfaitiser</h1>
-                <br>
-                <div class="englobeInput">
-                {{ form_start(form) }}
-<table class="table">
-  <tbody>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <td>{{ form_row(form.repas_midi)}}</td>
-      <td>{{ form_row(form.periode)}}</td>
-      <td>{{ form_row(form.nuits)}}</td>
-      <td>{{ form_row(form.etape)}}</td>
-      <td>{{ form_row(form.km)}}</td>
-    </tr>
-  </tbody>
-</table>
-
-
-
-
-
-
-
-<button type="submit" class="btn btn-secondary">Valider</button>
-{{ form_end(form) }} #}
-
-{# 
-
-                </div>
-
-                <div class="champsElementForfaitisé">
-                <br>
-                    <h1>Nouvel élément hors forfait</h1>
-                    <br>
-                    <div class="englobeInput">
-
-                           {{ form_start(form2) }}
-<table class="table">
-  <tbody>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <td>{{ form_row(form2.date)}}</td>
-      <td>{{ form_row(form2.libelle)}}</td>
-      <td>{{ form_row(form2.montant)}}</td>
-    </tr>
-  </tbody>
-</table>
-
-
-<button type="submit" class="btn btn-secondary">Valider</button>
-{{ form_end(form2) }}
-
-                    </div> #}
-
+      <br>
+  <a href="{{path('saisiefichesHorsForfait')}}" class="interact profil">
+    <p>Voulez vous saisir une fiche de type hors forfait ?</p>
+  </a>
 {% endblock %}
