--- a/templates/gsb/SaisieHorsForfait.html.twig
+++ b/templates/gsb/SaisieHorsForfait.html.twig
@@ -4,6 +4,7 @@
 {% form_theme form2 'bootstrap_5_layout.html.twig' %}
 
 {% block body %}
+{# Menu de navigation #}
     <header>
         <a class="nav-title-white" href="{{path('gsb')}}">
             <li>GSB - Galaxy Swiss Bourdin</li>
@@ -15,7 +16,7 @@
 
     <section>
 
-
+{# Tableau de bord #}
         <div class="navigation interact">
             <div class="profil">
                 <i class="far fa-user-circle fa-2x"></i>
@@ -42,7 +43,7 @@
             <h1 class="title-head">Saisie fiche de frais</h1>
 
 <br>
-
+{# Affichage de la période en cours #}
 <section class="filter">
 <div class="periode">
 <h3 class="tab-color">PÉRIODE D'ENGAGEMENT</h3>
@@ -53,10 +54,9 @@
 <br>
 <br>
 
-
+{# Affichage du formualaire de saisie fiche de frais hors forfait #}
 <section class="fiches-screen">
 <div class="Fiches-screen">          
-
 
 
 <table class="table ">
@@ -82,12 +82,6 @@
 {{ form_end(form2) }}
 <div> 
 
-               <a href="{{path('saisiefiches')}}" class="interact profil">
-                
-                    Saisir fiche au forfait ?
-                </a>
-
-
-
+    <a href="{{path('saisiefiches')}}" class="interact profil">Saisir fiche au forfait ?</a>
 
 {% endblock %}
